edited client UI

--- a/public/main.html
+++ b/public/main.html
@@ -152,6 +152,7 @@
                  </tr>`;
       $('#mainPlaylistRow').append(row)
       addToActivityFeed('added', user_name, track_id, track_name, artist);
+      // checkIfPlaylistEmpty(track_id, track_image)
     })
    
     socket.on('increase votes', function(user_name, track_id, track_name, artist){
@@ -186,36 +187,36 @@
       $(`#tablePlaylist tr#${track_id}`).remove();
     })
 
-  var counter = 1
-  socket.on('picture upload', function(picture, filename, width, height){
-    // *** filename is used as an id ***
-    var posx = 0
-    var posY = 0 
+    var counter = 1
+    socket.on('picture upload', function(picture, filename, width, height){
+      // *** filename is used as an id ***
+      var posx = 0
+      var posY = 0 
 
-    function calcPosition() {
-      var row = document.getElementById(`${filename}`).parentElement.parentElement.getBoundingClientRect();
-      var section = document.getElementById(`${filename}`).parentElement.getBoundingClientRect();
-      posX = Math.floor(Math.random()*(section.width - width))
-      posY = Math.floor(Math.random()*(row.height - height))
-      console.log("3 :  " + posX + " " + posY)
-    }
+      function calcPosition() {
+        var row = document.getElementById(`${filename}`).parentElement.parentElement.getBoundingClientRect();
+        var section = document.getElementById(`${filename}`).parentElement.getBoundingClientRect();
+        posX = Math.floor(Math.random()*(section.width - width))
+        posY = Math.floor(Math.random()*(row.height - height))
+        console.log("3 :  " + posX + " " + posY)
+      }
 
-    if ( counter % 3 == 0 ) {
-      $('#section_left').append(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`)
-      calcPosition();
-    } 
-    else if ( counter % 2 == 0 ) {
-      $('#section_right').append(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`)
-      calcPosition();
-    } 
-    else if ( counter % 1 == 0 ) {
-      $('#bottom_section').append(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`)
-      calcPosition();
-    }
-    counter++
-    $(`#${filename}`).css({ 'position': 'absolute', 'left': posX, 'top': posY })
+      if ( counter % 3 == 0 ) {
+        $('#section_left').append(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`)
+        calcPosition();
+      } 
+      else if ( counter % 2 == 0 ) {
+        $('#section_right').append(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`)
+        calcPosition();
+      } 
+      else if ( counter % 1 == 0 ) {
+        $('#bottom_section').append(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`)
+        calcPosition();
+      }
+      counter++
+      $(`#${filename}`).css({ 'position': 'absolute', 'left': posX, 'top': posY })
 
-  })
+    })
   
     DZ.init({
       appId  : '190182',
@@ -232,6 +233,15 @@
       var left = evt.offsetX;
       DZ.player.seek((evt.offsetX/$(this).width()) * 100);
     });
+
+    // function checkIfPlaylistEmpty(track_id, track_image) {
+    //   var next_track_id = $("#mainPlaylist tbody tr:nth-child(2)")
+    //   var current_track = $("#currentTrack").text()
+
+    //   if ( (next_track_id.length == 0) && (current_track.length == 0) ) {
+    //     startPlayer(track_id, track_image); 
+    //   } 
+    // }
 
     function loadTrackImage(track_image){
       $('.album_art > img').fadeOut(2000, function() {
@@ -284,14 +294,14 @@
         $("#slider_seek").find('.bar').css('width', (100*arg[0]/arg[1]) + '%');
       });
     }
-      
-    </script>
-    <script src="tablesort.min.js"></script>
-    <script src="tablesort.number.js"></script>
-    <script>
-      sort = new Tablesort(document.getElementById('mainPlaylist'), {
-        descending: true
-      });
-    </script>
+    
+  </script>
+  <script src="tablesort.min.js"></script>
+  <script src="tablesort.number.js"></script>
+  <script>
+    sort = new Tablesort(document.getElementById('mainPlaylist'), {
+      descending: true
+    });
+  </script>
   </body>
 </html>
