--- a/public/client.html
+++ b/public/client.html
@@ -5,13 +5,15 @@
     <link rel="stylesheet" href="client.css">
     <script src='/socket.io/socket.io.js'></script>  
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+
+<!--     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ -->  </head>
  
   <body>
   <div class="container">
 
-    <img id='mic' src='/images/mic.png'>
+    <img id='mic' src='/images/setupPhoto-1473792487259.png'>
     <!-- <h1 class="headline">Jukebox</h1> -->
     <ul id="chat_area">
      
@@ -150,5 +152,4 @@
     });
   </script> 
 </html>
-
 
