--- a/public/main.html
+++ b/public/main.html
@@ -17,7 +17,7 @@
       <div id="section_left" class="col-sm-4""></div>
       <div class="container col-md-4" id="main">
         <!-- mic -->
-        <img id='mic' src='/images/mic.png'>
+        <img id='mic' src='/images/setupPhoto-1473792487259.png'>
 
         <!-- album art slider here -->
         <div class="album_art">
