--- a/public/setup.html
+++ b/public/setup.html
@@ -24,7 +24,7 @@
 			</div>
 
 				<div class="col-md-6">
-					<h4 class="custom_logo_text">Upload a your own wallpaper</h4>
+					<h4 class="custom_logo_text">Upload your own wallpaper</h4>
 					<div class="pictureDiv">
 			    <form id="wallpaper_form" enctype="multipart/form-data" action="/setupWallpaper" method="post">
 			      <input type="file" id="picture_select_wallpaper" name="setupPhoto" class="hidden" />
