--- a/public/main.html
+++ b/public/main.html
@@ -174,47 +174,33 @@
         posX = Math.floor(Math.random()*(section.width - width))
         posY = Math.floor(Math.random()*(row.height - height))
       }
-      
-      pictureQueue.push({
-        picture: picture,
-        filename: filename,
-        width: width,
-        height: height,
-        counter: counter
-      })
 
-      addImages();
-      function addImages() {
-        if ( pictureQueue[0].counter % 3 == 0 ) {
-          $('#section_left').empty().append($(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`).hide().fadeIn('slow', function(){
-            $(this).delay(3200).fadeOut('slow')
-          }));
-          $(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`)
-          calcPosition();
-          $(`#${filename}`).css({ 'position': 'absolute', 'left': posX, 'top': posY })
-        } 
-        else if ( pictureQueue[0].counter % 2 == 0 ) {
-          $('#section_right').empty().append($(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`).hide().fadeIn('slow', function(){
-            $(this).delay(3200).fadeOut('slow')
-          }));
-          $(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`)
-          calcPosition();
-          $(`#${filename}`).css({ 'position': 'absolute', 'left': posX, 'top': posY })
-        } 
-        else if ( pictureQueue[0].counter % 1 == 0 ) {
-          $('#bottom_section').empty().append($(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`).hide().fadeIn('slow', function(){
-            $(this).delay(3200).fadeOut('slow')
-          }));
-          $(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`)
-          calcPosition();
-          $(`#${filename}`).css({ 'position': 'absolute', 'left': posX, 'top': posY })
-        }
-        pictureQueue.shift()
-        counter++
-        if (pictureQueue.length > 0) {
-          setTimeout(addImages, 3000)
-        }
+      if ( counter % 3 == 0 ) {
+        $('#section_left').empty().append($(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`).hide().fadeIn('slow', function(){
+          $(this).delay(3200).fadeOut('slow')
+        }));
+        $(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`)
+        calcPosition();
+        $(`#${filename}`).css({ 'position': 'absolute', 'left': posX, 'top': posY })
+      } 
+      else if ( counter % 2 == 0 ) {
+        $('#section_right').empty().append($(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`).hide().fadeIn('slow', function(){
+          $(this).delay(3200).fadeOut('slow')
+        }));
+        $(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`)
+        calcPosition();
+        $(`#${filename}`).css({ 'position': 'absolute', 'left': posX, 'top': posY })
+      } 
+      else if ( counter % 1 == 0 ) {
+        $('#bottom_section').empty().append($(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`).hide().fadeIn('slow', function(){
+          $(this).delay(3200).fadeOut('slow')
+        }));
+        $(`<img id="${filename}" class="user_pic" src="/uploads/${picture}">`)
+        calcPosition();
+        $(`#${filename}`).css({ 'position': 'absolute', 'left': posX, 'top': posY })
       }
+
+      counter++
     })
   
     DZ.init({
