--- a/public/main.html
+++ b/public/main.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="progress_bar.css">
     <script type="text/javascript" src="https://cdns-files.dzcdn.net/js/min/dz-v00350607.js"></script>
-    <script type="text/javascript" src="http://cdn-files.deezer.com/js/min/dz.js"></script>
+    <script type="text/javascript" src="https://cdn-files.deezer.com/js/min/dz.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
   </head>
  
@@ -104,6 +104,9 @@
   <script src='/socket.io/socket.io.js'></script> 
   <script>
     var socket = io();
+
+    // socket.on('welcome', )
+
     function addToActivityFeed(activity, user_name, track_id, track_name, artist){
       if (user_name == null) {
         $('#activity_feed > p').fadeOut(2000, function() {
