--- a/public/client.html
+++ b/public/client.html
@@ -2,151 +2,93 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="client.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
-    <script src='/socket.io/socket.io.js'></script>  
+    <link rel="stylesheet" href="client.css">
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+    <script src='/socket.io/socket.io.js'></script>
+    <script src='socket_client.js'></script>  
+    <script src='client.js'></script> 
+    <script src="tablesort.min.js"></script>
+    <script src='tablesort.number.js'></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-
-<!--     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- -->  </head>
+  </head>
  
   <body>
-  <div class="container">
 
-    <img id='mic' src='/images/setupPhoto-1473793237491.png'>
-    <!-- <h1 class="headline">Jukebox</h1> -->
-    
-    <form id="nickname_form">
-      <label>Nickname:</label>
-      <input id="nickname" type="text" class="form-control">
-      <button class="btn btn-primary" id="nickname_submit">Submit</button>
-    </form>
+    <div class="container">
 
-    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-      <div class="btn-group" role="group">
-        <button type="button" id="mainSearchTab" class="btn btn-default">Search</button>
+      <!-- mic or custom logo -->
+      <img id='mic' src='/images/setupPhoto-1473793237491.png'>
+      
+      <!-- users can input their preferred name/nickname -->
+      <form id="nickname_form">
+        <label>Nickname:</label>
+        <input id="nickname" type="text" class="form-control">
+        <button class="btn btn-primary" id="nickname_submit">Submit</button>
+      </form>
+
+      <!-- button group Search/Vote/Post a Picture -->
+      <div class="btn-group btn-group-justified" role="group" aria-label="...">
+        <div class="btn-group" role="group">
+          <button type="button" id="mainSearchTab" class="btn btn-default">Search</button>
+        </div>
+        <div class="btn-group" role="group">
+          <button type="button" id="mainVoteTab" class="btn btn-default">Vote</button>
+        </div>
+        <div class="btn-group" role="group">
+          <button type="button" id="mainPictureTab" class="btn btn-default">Post a picture!</button>
+        </div>
       </div>
-      <div class="btn-group" role="group">
-        <button type="button" id="mainVoteTab" class="btn btn-default">Vote</button>
+
+      <!-- Searchbox for Tracks -->
+      <div id="autocomplete" class="center-block" style="margin-top: 20px; margin-bottom: 20px;">
+        <input id="search" placeholder="Search for Tracks" class="center-block form-control"></input>
       </div>
-      <div class="btn-group" role="group">
-        <button type="button" id="mainPictureTab" class="btn btn-default">Post a picture!</button>
+
+      <!-- Welcome Message -->
+      <h1 id="welcome_h1">Welcome! Hit a tab to get started</h1>
+
+      <!-- Post a Picture -->
+      <div id="pictureDiv">
+        <form id="uploadForm" enctype="multipart/form-data" action="/uploads" method="post">
+          <input type="file" id="picture_select" name="userPhoto" class="hidden"/>
+          <label for="picture_select" id="picture_select_label">
+            <img id="camera_icon" src="/images/camera-flat.png">
+          </label>
+          <input id="picture_select_submit" type="submit" value="Upload" name="submit">
+        </form>
+
+        <!-- display message feedback while posting a picture -->
+        <p id="message"></p>
       </div>
+
+      <!-- voting table for existing tracks on the main playlist where users can upvote or downvote tracks -->
+      <table id="tablePlaylist" class="table-condensed table table-striped col-xs-12">
+        <thead>
+          <tr>
+            <th class="track_info_voting"></th>
+            <th class="img_td_2"></th>
+            <th class="img_td_2"></th>
+            <th class="img_td_2 sort-default"></th>  
+          </tr>
+        </thead>
+        <tbody id="playlist">
+        </tbody>
+      </table>  
+
+      <!-- table to display search track results-->
+      <table id="tableSearchResults" class="table-condensed table table-striped col-xs-12">
+        <tbody id="searchResults">
+        </tbody>
+      </table>
+
     </div>
 
-    <div id="autocomplete" class="center-block" style="margin-top: 20px; margin-bottom: 20px;">
-      <input id="search" placeholder="Search for Tracks" class="center-block form-control"></input>
-    </div>
+    <hr>
+    <!-- displays the names of the users connected to the app -->
+    <h5 class="text-center one_one_em">Current users:</h5>
+    <div id="users"></div>
 
-    <h1 id="welcome_h1">Welcome! Hit a tab to get started</h1>
-    <div id="pictureDiv">
-    <form id="uploadForm" enctype="multipart/form-data" action="/uploads" method="post">
-      <input type="file" id="picture_select" name="userPhoto" class="hidden"/>
-      <label for="picture_select" id="picture_select_label">
-        <img id="camera_icon" src="/images/camera-flat.png">
-      </label>
-      <input id="picture_select_submit" type="submit" value="Upload" name="submit">
-    </form>
-    <p id="message"></p>
-    </div>
-
-    <table id="tablePlaylist" class="table-condensed table table-striped col-xs-12">
-      <thead>
-        <tr>
-          <th class="track_info_voting"></th>
-          <th class="img_td_2"></th>
-          <th class="img_td_2"></th>
-          <th class="img_td_2 sort-default"></th>  
-        </tr>
-      </thead>
-      <tbody id="playlist">
-      </tbody>
-    </table>  
-
-    <table id="tableSearchResults" class="table-condensed table table-striped col-xs-12">
-      <tbody id="searchResults">
-      </tbody>
-    </table>
-  </div>
-
-  <hr>
-  <h5 class="text-center one_one_em">Current users:</h5>
-  <div id="users"></div>
-</body>
-  <script>
-    var socket = io();
-    $('#nickname_form').submit(function(){
-      socket.emit('name submit', $('#nickname').val(), socket.id);
-      $('#nickname_form').hide();
-      $('#message_form').show();
-      return false;
-    })
-
-    socket.on('send names', function(name, id){
-      $('#users').append(`<p data-id=${id}>${name} </p>`)
-    })
-
-    socket.on('delete name', function(name, id){
-      $(`p[data-id=${id}]`).remove();
-    })
-
-    socket.on('populate names', function(names){
-      $('#users').empty()
-      for(var i = 0; i < names.length; i++){
-        $('#users').append(`<p data-id=${names[i]["id"]}>${names[i]["name"]} </p>`)
-      }
-    })
-
-    socket.on('broadcast track', function(user_name, track_id, track_title, artist, track_image){
-  
-      var playlistRow = `<tr id="${track_id}">
-                           <td class="track_info_voting">
-                            <ul class="list-unstyled">
-                              <div class="tr_title"><li class="text-left">${track_title}</li></div>
-                              <li class="ext-left"><small class="one_one_em">${artist}</small></li>
-                            </ul>
-                           </td>
-                           <td class="img_td_2">
-                            <button class="up"><img class="addButtonImages" src="images/thumbs_up.png"/></button>
-                           </td>
-                           <td class="img_td_2">
-                            <button class="down"><img class="addButtonImages" src="images/thumbs_down.png"/></button>
-                           </td>
-                           <td class="img_td_2">
-                            <span class="label label-success">0</span>
-                           </td>
-                         </tr>`;
-
-      $('#playlist').append(playlistRow);
-    })
-
-    socket.on('increase votes', function(user_name, track_id){
-      var votes = $(`tr#${track_id} td:nth-child(4)>span`).text();
-      votes = Number(votes) + 1 
-      $(`tr#${track_id} td:nth-child(4)>span`).html(votes);
-      sort.refresh()
-    })
-
-    socket.on('decrease votes', function(user_name, track_id){
-      var votes = $(`tr#${track_id} td:nth-child(4)>span`).text();
-      votes = Number(votes) - 1 
-      $(`tr#${track_id} td:nth-child(4)>span`).html(votes);
-      sort.refresh()
-    })
-
-    socket.on('remove trackFromPlaylist', function(track_id){
-      $(`#tablePlaylist tr#${track_id}`).remove();
-    })
-
-  </script>
-  <script src='client.js'></script>  
-  <script src="tablesort.min.js"></script>
-  <script src='tablesort.number.js'></script>
-  <script>  
-    sort = new Tablesort(document.getElementById('tablePlaylist'),{
-      descending: true
-    });
-  </script> 
+  </body>
 </html>
 
