--- a/public/main.html
+++ b/public/main.html
@@ -18,7 +18,7 @@
     <div class="row">
       <div id="section_left" class="col-sm-4""></div>
       <div class="container col-md-4" id="main">
-        <!-- mic -->
+        <!-- mic or logo -->
         <img id='mic' src='/images/setupPhoto-1473793237491.png'>
 
         <div id="initial_message"> 
